--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
   <div id="bottomAd" class="ad-slot"></div>
 
   <script src="app.js"></script>
+  <script 
+  src="https://zeehragul9-dot.github.io/ads-zahra/embed.js" 
+  data-video="https://othersite.com/video.mp4">
+</script>
+<script src="https://zeehragul9-dot.github.io/ads-zahra/embed.js"></script>
+
 </body>
 
 </html>
